# client-sdk-python

./: README.md
bank-feeds/: .gitignore  README.md  RELEASES.md  USAGE.md  files.gen  gen.yaml  pyproject.toml  setup.py
bank-feeds/.speakeasy/: gen.yaml
bank-feeds/docs/models/errors/: errormessage.md
bank-feeds/docs/models/operations/: createbankaccountmappingbankfeedaccountmapping.md  createbankaccountmappingrequest.md  createbankaccountmappingresponse.md  createbankaccountrequest.md  createbankaccountresponse.md  createbankfeedrequest.md  createbankfeedresponse.md  createbanktransactionscreatebankaccounttransactions.md  createbanktransactionsrequest.md  createbanktransactionsresponse.md  createbatchsourceaccount1.md  createbatchsourceaccountrequest.md  createbatchsourceaccountrequestbody.md  createbatchsourceaccountresponse.md  createbatchsourceaccountresponsebody.md  createbatchsourceaccountsourceaccountsresponsebody.md  createcompanyresponse.md  createdataconnectionresponse.md  createsourceaccountrequest.md  createsourceaccountresponse.md  createsourceaccountresponsebody.md  deletebankfeedcredentialsrequest.md  deletebankfeedcredentialsresponse.md  deletecompanyresponse.md  deletesourceaccountrequest.md  deletesourceaccountresponse.md  generatecredentialsrequest.md  (+39 more)
bank-feeds/scripts/: prepare_readme.py
bank-feeds/src/codat_bankfeeds/: _version.py  account_mapping.py  bank_accounts.py  basesdk.py  companies.py  company_information.py  configuration.py  connections.py  managed_bank_feeds.py  sdk.py  sdkconfiguration.py  source_accounts.py  sync.py  transactions.py
bank-feeds/src/codatbankfeeds/: account_mapping.py  bank_accounts.py  bank_feed_accounts.py  companies.py  configuration.py  connections.py  sdk.py  sdkconfiguration.py  source_accounts.py  transactions.py
platform/: README.md  RELEASES.md  USAGE.md  files.gen  gen.yaml  pylintrc  pyproject.toml  setup.py
platform/.speakeasy/: gen.yaml
platform/scripts/: prepare-readme.py  prepare_readme.py
platform/src/codat_platform/: _version.py  basesdk.py  companies.py  connection_management.py  connections.py  cors.py  cors_settings.py  custom_data_type.py  integrations.py  push_data.py  read_data.py  refresh_data.py  sdk.py  sdkconfiguration.py  settings.py  supplemental_data.py  webhooks.py
platform/src/codatplatform/: companies.py  connection_management.py  connections.py  cors_settings.py  custom_data_type.py  groups.py  integrations.py  push_data.py  refresh_data.py  sdk.py  sdkconfiguration.py  settings.py  supplemental_data.py  webhooks.py
(+11305 files in other folders)
