[tool.poetry]
name = "codat-bankfeeds"
version = "10.1.0"
description = "Set up bank feeds from accounts in your application to supported accounting software."
authors = ["Speakeasy",]
readme = "README-PYPI.md"
repository = "https://github.com/codatio/client-sdk-python.git"
packages = [
    { include = "codat_bankfeeds", from = "src" }
]
include = ["py.typed", "src/codat_bankfeeds/py.typed"]

[tool.setuptools.package-data]
"*" = ["py.typed", "src/codat_bankfeeds/py.typed"]

[virtualenvs]
in-project = true

[tool.poetry.dependencies]
python = "^3.8"
eval-type-backport = "^0.2.0"
httpx = "^0.28.1"
jsonpath-python = "^1.0.6"
pydantic = "~2.10.3"
python-dateutil = "^2.8.2"
typing-inspect = "^0.9.0"

[tool.poetry.group.dev.dependencies]
mypy = "==1.13.0"
pylint = "==3.2.3"
types-python-dateutil = "^2.9.0.20240316"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
disable_error_code = "misc"

[[tool.mypy.overrides]]
module = "typing_inspect"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonpath"
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".venv"


